--- a/index.html
+++ b/index.html
@@ -367,13 +367,13 @@
       justify-content: center;
       justify-items: center;
       width: 100%;
-      height: 1150px;
-      background: rgba(225, 228, 235, 0.278);  
-      color: rgba(111, 111, 111, 0.925);
+      height: 1190px;
+      background: rgba(199, 200, 208, 0.192);  
+      color: rgba(109, 109, 109, 0.925);
       font-family: 'helvetica';
       font-weight: bold;
-      padding: 3rem;
-      opacity: 0.93;
+      padding: 2.5rem;
+      opacity: 0.95;
       border-bottom: 0.16px solid rgba(196, 199, 204, 0.206);
       
     }
@@ -1645,7 +1645,7 @@ font-size: 19px;
   height: 467px;
   overflow: hidden;
   opacity: 0.97;
-  border-radius: 0.45rem;
+  border: 0.5px solid #dbdbdbc6;
 }
 
 .VDi:hover{
@@ -1660,13 +1660,11 @@ font-size: 19px;
   height: 467px;
   background: lightblue;
   opacity: 0.97;
-  border-radius: 0.45rem;
 }
 
 .VDI img{
   width: 100%;
   height: 467px;
-  border-radius: 0.45rem;
 }
 
 @keyframes auto{
@@ -1699,13 +1697,11 @@ font-size: 19px;
   animation-delay: 8s;
   background: lightblue;
   opacity: 0.97;
-  border-radius: 0.45rem;
 }
 
 .VDII img{
   width: 100%;
   height: 467px;
-  border-radius: 0.45rem;
 }
 @keyframes auto{
             0% {
@@ -1737,13 +1733,11 @@ font-size: 19px;
   animation-delay: 4s;
   background: lightblue;
   opacity: 0.97;
-  border-radius: 0.45rem;
 }
 
 .VDIII img{
   width: 100%;
   height: 467px;
-  border-radius: 0.45rem;
 }
 @keyframes auto{
             0% {
@@ -1773,17 +1767,17 @@ font-size: 19px;
           align-items: center;
           flex-direction: column;
           width: 78%;
-          height: 586px;
-          color: #838383ee; 
-          font-family: arial;
+          height: 580px;
+          color: #868686f5; 
+          font-family: georgia;
           font-size: 21.5px; 
           text-align: left; 
-          line-height: 30.3px;
+          line-height: 28.8px;
           padding: 2rem;
           cursor: pointer;
-          background: #fff;
-          border: 0.15px solid rgba(196, 199, 204, 0.206);
-          opacity: 0.95;
+          background: #fff;  
+          opacity: 0.96;
+          margin-top: 1rem;
         }
 
 .footer1 img{
@@ -2504,7 +2498,7 @@ font-size: 19px;
 
             <div class="navbar1">
 
-              <div class="VDi" style="border: 1.5px solid rgba(91, 91, 200, 0.74); padding: 1px;">
+              <div class="VDi">
   
                 <div class="VDI">
               <img src="https://www.zupimages.net/up/23/14/zilu.jpg" alt="sunshet of la Prairie River">
@@ -2524,8 +2518,8 @@ font-size: 19px;
 
               <div class="ViD">
               
-                <h1 style="font-size: 2rem; text-align: left; margin-top: 0.9rem; color: #555454e4;">What it means to live with a disability ?</h1>
-            <p>Living as a disabled person is life-changing and perpetual challenging. Over the learning side that goes with discriminations, living as a disabled may be teaching in terms of how the courage and the determination of disabled people can inspire, energize and may bring hope for some people in communities. Sometimes disabled people are unintentionally considered to be like social barometers despite social bareers they do encounter on a daily basis. Through conversations and social interactions, they may be able to measure the level and the trending of 
+                <h1 style="font-size: 2rem; text-align: left; margin-top: 1rem; color: #616161e4;">What it means to live with a disability ?</h1>
+            <p>Living as a disabled person is perpetually challenging and life-changing. Over the learning side that goes with discriminations, living as a disabled may be teaching in terms of how the courage and the determination of disabled people can inspire, energize and may bring hope for some people in communities. Sometimes disabled people are unintentionally considered to be like social barometers despite social bareers they do encounter on a daily basis. Through conversations and social interactions, they may be able to measure the level and the trending of 
              certain human values including humility, mutual respect between people, sharing spirit, sensibility, compassion, proactivity and solidarity amongst others. Being disabled is undoubtly tough and the issues can vary from person to person and from a region to another.
                Depending the status and the region of disabled people, will determine the quality and the quantity of their lives experiences. But it's not unknown that the harsh and silent climate of discriminations towards disabled people, is undermining their rights. They have always to deal with unfairness and stigmatisation. It shouldn't. That's why Tiki N'Yiki is created to improve Education and Protect Rights of disabled people especially disabled children.
 
