--- a/index.html
+++ b/index.html
@@ -1645,7 +1645,7 @@ font-size: 19px;
   height: 467px;
   overflow: hidden;
   opacity: 0.97;
-  border: 0.5px solid #dbdbdbc6;
+  border: 0.16rem solid darkblue;
 }
 
 .VDi:hover{
