--- a/index.html
+++ b/index.html
@@ -1645,7 +1645,7 @@ font-size: 19px;
   height: 467px;
   overflow: hidden;
   opacity: 0.97;
-  border: 0.16rem solid darkblue;
+  border: 0.12rem solid rgba(179, 180, 187, 0.192);
 }
 
 .VDi:hover{
