--- a/index.html
+++ b/index.html
@@ -184,8 +184,9 @@
                  z-index: 1;
                  top: 0;
                  position: sticky;
-                 border-bottom: 2px solid #f1f1f1;
+                
                  cursor: pointer;
+                 box-shadow: 0 5px 0.5rem -5px #133eb6e7;
           }
 
           .navbar:hover{
