--- a/index.html
+++ b/index.html
@@ -367,8 +367,8 @@
       justify-content: center;
       justify-items: center;
       width: 100%;
-      height: 1170px;
-      background: rgba(213, 213, 230, 0.203);  
+      height: 1200px;
+      background: rgba(201, 204, 222, 0.195);  
       color: rgba(109, 109, 109, 0.925);
       font-family: 'helvetica';
       font-weight: bold;
@@ -1595,7 +1595,7 @@ font-size: 19px;
     
     }
     ::-webkit-scrollbar-track-piece{
-        background: rgba(19, 44, 126, 0.931);
+        background: rgb(22, 77, 149);
         cursor: pointer;
   
     }
@@ -1767,12 +1767,12 @@ font-size: 19px;
           align-items: center;
           flex-direction: column;
           width: 78%;
-          height: 580px;
+          height: 600px;
           color: #7b7b7bf5; 
           font-family: georgia;
-          font-size: 21.46px; 
+          font-size: 21.6px; 
           text-align: left; 
-          line-height: 28.4px;
+          line-height: 28.7px;
           padding: 2rem;
           cursor: pointer;
           background: #fff;  
