--- a/index.html
+++ b/index.html
@@ -375,6 +375,7 @@
       font-weight: bold;
       padding: 2.5rem;
       opacity: 0.95; 
+      box-shadow: 0 0 0.1rem 0.1px rgba(79, 111, 208, 0.521);
     }
     
         h1{
