--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                  top: 0;
                  position: sticky;
                  cursor: pointer;
-                 box-shadow: 0 5.4px 0.5rem 4px rgba(46, 81, 163, 0.954);
+                 box-shadow: 0 2.6px 0.5rem -2px rgba(2, 107, 255, 0.964);
           }
 
           .navbar:hover{
@@ -369,7 +369,7 @@
       justify-items: center;
       width: 100%;
       height: 1238px;
-      background: rgba(172, 174, 183, 0.24);
+      background: rgba(163, 163, 170, 0.226);
       color: rgba(109, 109, 109, 0.925);
       font-family: 'helvetica';
       font-weight: bold;
@@ -440,7 +440,7 @@
         flex-direction: column;
         width: 100%;
         height: auto;
-        background: rgba(172, 174, 183, 0.24);
+        background: rgba(163, 163, 170, 0.226);
         opacity: 0.95;
     }
   
@@ -496,7 +496,7 @@
           .T-Area:hover{
            background: #fff;
            color: #000;
-           border: 0.12rem solid #000;
+           border: 0.12rem solid #1357e8ee;
            transition: 0.2s ease-in;
           }
 
@@ -566,10 +566,10 @@
             align-items: center;
             width: 100%;
             height: 60px;
-            background: #7f0b33f6;
-            color: gold;
-            border-radius: 3rem;
-            border: 0.15px solid #8f8f8ff9;
+            border: 0.14px solid rgba(172, 174, 183, 0.565);
+            color: #2b2b2bbb;
+            background: rgba(172, 174, 183, 0.24);
+border-radius: 3rem;
             padding: 5px;
             font-family: 'georgia';
             font-size: 1.35rem;
@@ -620,10 +620,10 @@
             align-items: center;
             width: 100%;
             height: 60px;
-            background: #7f0b33f6;
-color: gold;
+            background: rgba(172, 174, 183, 0.24);
+color: #2b2b2bbb;
 border-radius: 3rem;
-border: 0.15px solid #8f8f8ff9;
+border: 0.14px solid rgba(172, 174, 183, 0.565);
             padding: 5px;
             font-family: 'georgia';
             font-size: 1.35rem;
@@ -772,12 +772,12 @@ font-size: 15px;
 width: 290px;
 height: 43px;
 padding: 6px;
-background: #7b0c33ee;
-color: gold;
+border: 0.14px solid rgba(172, 174, 183, 0.565);
+            color: #2b2b2bbb;
+            background: rgba(172, 174, 183, 0.24);
 border-radius: 3rem;
-border: 0.15px solid #969696fe;
 font-size: 1.1rem;
-margin-top: -0.6rem;
+margin-top: -1rem;
           }
 
           .BA:hover{
@@ -1118,10 +1118,10 @@ width: 100%;
 height: auto;
 padding: 10px;
 font-family: helvetica;
-background: #7f0b33f6;
-color: gold;
+border: 0.14px solid rgba(172, 174, 183, 0.565);
+            color: #2b2b2bbb;
+            background: rgba(172, 174, 183, 0.24);
 border-radius: 3rem;
-border: 0.15px solid #939393f6;
 cursor: pointer;
 opacity: 0.97;
 }
@@ -1140,10 +1140,10 @@ width: 100%;
 height: auto;
 padding: 10px;
 font-family: helvetica;
-background: #7f0b33f6;
-color: gold;
+border: 0.14px solid rgba(172, 174, 183, 0.565);
+            color: #2b2b2bbb;
+            background: rgba(172, 174, 183, 0.24);
 border-radius: 3rem;
-border: 0.15px solid #939393f6;
 cursor: pointer;
 opacity: 0.97;
 }
@@ -1161,10 +1161,10 @@ width: 100%;
 height: auto;
 padding: 10px;
 font-family: helvetica;
-background: #7f0b33f6;
-color: gold;
+border: 0.14px solid rgba(172, 174, 183, 0.565);
+            color: #2b2b2bbb;
+            background: rgba(172, 174, 183, 0.24);
 border-radius: 3rem;
-border: 0.15px solid #939393f6;
 cursor: pointer;
 opacity: 0.97;
 }
@@ -1295,10 +1295,10 @@ background: transparent;
   font-family: helvetica;
   font-size: 14px;
 line-height: 14.25px;
-background: #7f0b33f6;
-color: gold;
+border: 0.14px solid rgba(172, 174, 183, 0.565);
+            color: #2b2b2bbb;
+            background: rgba(172, 174, 183, 0.24);
 border-radius: 3rem;
-border: 0.15px solid #8f8f8ff9;
 opacity: 0.9;
 }
 .Doctor:hover{
@@ -1357,10 +1357,10 @@ font-size: 14px;
   height: 60px;
   font-size: 22px;
 line-height: 14.25px;
-background: #880b37f6;
-color: gold;
+border: 0.14px solid rgba(172, 174, 183, 0.565);
+            color: #2b2b2bbb;
+            background: rgba(172, 174, 183, 0.24);
 border-radius: 3rem;
-border: 0.15px solid #9a9999f9;
 opacity: 0.97;
 }
 
@@ -1572,10 +1572,10 @@ font-size: 20px;
   font-family: helvetica;
   font-size: 22px;
 line-height: 14.25px;
-background: #c1c1c1d3;
-color: #000;
+border: 0.14px solid rgba(172, 174, 183, 0.565);
+            color: #2b2b2bbb;
+            background: rgba(172, 174, 183, 0.24);
 border-radius: 0.5rem;
-border: 0.75px solid #8b8b8bf9;
 margin-top: 1rem; 
 opacity: 0.9;
 }
@@ -2709,17 +2709,20 @@ font-size: 19px;
 
               <div class="DiapoPhoto">
                 <div class="T">
-                <div class="BoderTopColor1" style="opacity: 0.97; background:#760b30f6; color: rgb(236, 200, 0); padding: 6px; font-family: 'helvetica'; font-size: 18px">Celebrating Christmas at Tiki N'Yiki's headquarter [Burkina Faso]</div>
+                <div class="BoderTopColor1" style="opacity: 0.97; border: 0.14px solid rgba(172, 174, 183, 0.565); color: #2b2b2bbb;
+                background: rgba(172, 174, 183, 0.24); padding: 6px; font-family: 'helvetica'; font-size: 18px">Celebrating Christmas at Tiki N'Yiki's headquarter [Burkina Faso]</div>
                 <div><img src="https://www.zupimages.net/up/22/31/z42x.jpg" alt="Christmas at Tiki N'Yiki"></div>
               </div>
 
               <div class="T1">
-                <div class="BoderTopColor1" style="opacity: 0.97; background:#760b30f6; color: rgb(236, 200, 0); padding: 6px; font-family: 'helvetica'; font-size: 18px">Classes in Ziniare [Burkina Faso]</div>
+                <div class="BoderTopColor1" style="opacity: 0.97; border: 0.14px solid rgba(172, 174, 183, 0.565); color: #2b2b2bbb;
+                background: rgba(172, 174, 183, 0.24); padding: 6px; font-family: 'helvetica'; font-size: 18px">Classes in Ziniare [Burkina Faso]</div>
                 <div><img src="https://www.zupimages.net/up/22/21/3bad.jpg" alt="Classes"> </div>
               </div>
 
               <div class="T2">
-                <div class="BoderTopColor1" style="opacity: 0.97; background:#760b30f6; color: rgb(236, 200, 0); padding: 6px; font-family: 'helvetica'; font-size: 18px">Teaching Has Always Been Funny To Me. I Learned A Lot Back</div>
+                <div class="BoderTopColor1" style="opacity: 0.97; border: 0.14px solid rgba(172, 174, 183, 0.565); color: #2b2b2bbb;
+                background: rgba(172, 174, 183, 0.24); padding: 6px; font-family: 'helvetica'; font-size: 18px">Teaching Has Always Been Funny To Me. I Learned A Lot Back</div>
                 <div><img src="https://www.zupimages.net/up/22/31/ttk3.jpg" alt="Teaching in BF"></div>
               </div>
 
