--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                  top: 0;
                  position: sticky;
                  cursor: pointer;
-                 box-shadow: 0 2.6px 0.5rem -2px rgba(2, 107, 255, 0.964);
+                 box-shadow: 0 6.5px 0.5rem 2px rgb(21, 65, 160);
           }
 
           .navbar:hover{
