--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       padding: 8px;
       transition: 0.2s linear;
       width: 100%;
-      color:cyan;
+      color: yellow;
       text-decoration: underline;
     }
 
@@ -118,7 +118,7 @@
       padding: 8px;
       transition: 0.2s linear;
       width: 100%;
-      color: cyan;
+      color: yellow;
       text-decoration: underline;
     }
     
@@ -142,7 +142,7 @@
       padding: 8px;
       transition: 0.2s linear;
       width: 100%;
-      color: cyan;
+      color: yellow;
       text-decoration: underline;
     }
 
@@ -167,7 +167,7 @@
       padding: 8px;
       transition: 0.2s linear;
       width: 100%;
-      color: cyan;
+      color: yellow;
       text-decoration: underline;
     }
 
@@ -369,7 +369,7 @@
       justify-items: center;
       width: 100%;
       height: 1238px;
-      background: rgba(163, 163, 170, 0.226);
+      background: rgba(163, 163, 170, 0.243);
       color: rgba(109, 109, 109, 0.925);
       font-family: 'helvetica';
       font-weight: bold;
@@ -440,7 +440,7 @@
         flex-direction: column;
         width: 100%;
         height: auto;
-        background: rgba(163, 163, 170, 0.226);
+        background: rgba(163, 163, 170, 0.243);
         opacity: 0.95;
     }
   
