--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
       align-items: center;
       width: 100%;
       height: 1.45rem;
-      font-size: 12.85px;
+      font-size: 12.45px;
       color: #fff;
-      font-family: 'arial black';
+      font-family: 'arial';
       padding: 5px;
       border-radius: 0.3rem;
       margin-top: -1rem;
@@ -109,9 +109,9 @@
       border-radius: 0.3rem;
       cursor: pointer;
       margin-top: -1.1rem;
-      font-size: 12.85px;
+      font-size: 12.45px;
       color: #fff;
-      font-family: 'arial black';
+      font-family: 'arial';
     }
 
     .BF:hover{
@@ -133,8 +133,8 @@
       padding: 8px;
       cursor: pointer;
       margin-top: -1.1rem;
-      font-family: 'arial black';
-      font-size: 12.85px;
+      font-family: 'arial';
+      font-size: 12.45px;
       color: #fff;
     }
 
@@ -155,8 +155,8 @@
       width: 100%;
       height: 1.5rem;
       padding: 5px;
-      font-family: 'arial black';
-      font-size: 11.8px;
+      font-family: 'arial';
+      font-size: 12.45px;
       color: #fff;
       border-radius: 0.3rem;
       margin-top: -0.72rem;
@@ -1646,7 +1646,7 @@ font-size: 19px;
   width: 80%;
   height: 415px;
   overflow: hidden;
-  margin-top: 1rem;
+  margin-top: 4.5rem;
   background: #000;
 }
 
@@ -2426,25 +2426,25 @@ font-size: 19px;
             <a href="https://www.online-translator.com/translation/french-english/manger" target="_blank">
             
             <div class="Translator">
-              <em> Translator</em>
+              Translator
             </div>
           </a>
             <a href="https://en.wikipedia.org/wiki/Burkina_Faso" target="_blank">
             <div class="BF">
-              <em> Burkina Faso</em>
+              Burkina Faso
             </div>
           </a>
       
           <a href="https://ameiph.com/" target="_blank">
             <div class="Asso">
-            <em> Associations/Organisations</em>
+            Associations/Organisations
             </div>
           </a>
           <a href="https://www.timeanddate.com/calendar/" target="_blank">
             <div class="datime">
-              <em><p id="demo" style="margin-left: 35px">
+              <p id="demo" style="margin-left: 35px">
                       <span id="datetime" > </span>
-                   </p></em>
+                   </p>
                   </div>
                 </a>
 
@@ -2561,7 +2561,7 @@ font-size: 19px;
 
               <figure>
                 <img src="https://www.zupimages.net/up/22/21/di3p.jpg" alt="Drumming - BFA">
-                <figcaption style="color: rgb(1, 229, 250); margin-top: 3px;">Drumming is one of the beloved activities for children</figcaption>
+                <figcaption style="color: rgb(1, 13, 250); margin-top: 3px;">Drumming is one of the beloved activities for children</figcaption>
                 </figure>
 
               </div>
@@ -2583,7 +2583,7 @@ font-size: 19px;
               <div class="CIP">
               <figure>
                 <img src="https://www.zupimages.net/up/22/46/daw5.jpg" alt="Support Teaching">
-                <figcaption style="color: rgb(1, 229, 250); margin-top: -1px;">Teaching Maths and Computer Science in French</figcaption>
+                <figcaption style="color: rgb(1, 13, 250); margin-top: -1px;">Teaching Maths and Computer Science in French</figcaption>
                 </figure>
             </div>
             <div class="PiK">
@@ -2624,7 +2624,7 @@ font-size: 19px;
                   as well as physically"
                 <br>
                 </em>
-                <em style="color: rgb(5, 209, 255); font-family: 'helvetica'; font-size: 18px;">[Stephen Hawking, English Physicist, Cosmologist and Author] 
+                <em style="color: rgb(37, 66, 195); font-family: 'helvetica'; font-size: 18px;">[Stephen Hawking, English Physicist, Cosmologist and Author] 
                 </em>
               </div>
             </a>
@@ -2639,16 +2639,16 @@ font-size: 19px;
               <div class="Kontent2">
 
                 <div class="AB">
-                <b style="font-size: 22px; color: rgb(5, 209, 255)">Etymology and Meaning</b>
+                <b style="font-size: 22px; color: rgb(37, 66, 195)">Etymology and Meaning</b>
                 <br>
                 <br>
                 Tiki N'Yiki is etymologically structured of two (2) words of Moore, a language in Burkina Faso</a> :
                 <br>
                 <br>
-              <b>1. Tiki</b> is litteraly meaning <b style="color: rgb(5, 209, 255); font-size: 16px;">Leaning upon</b>
+              <b>1. Tiki</b> is litteraly meaning <b style="color: rgb(37, 66, 195); font-size: 16px;">Leaning upon</b>
                 <br>
                 <br>
-              <b> 2. N'Yiki</b> is meaning <b style="color: rgb(5, 209, 255); font-size: 16px;">Getting up</b>
+              <b> 2. N'Yiki</b> is meaning <b style="color: rgb(37, 66, 195); font-size: 16px;">Getting up</b>
               </div>
 
               <a href="#">
@@ -2662,7 +2662,7 @@ font-size: 19px;
               <div class="Kontent3">
 
                 <div class="AB">
-                <b style="font-size: 22px; color: rgb(5, 209, 255)"> Why Tiki N'Yiki ?</b>
+                <b style="font-size: 22px; color: rgb(37, 66, 195)"> Why Tiki N'Yiki ?</b>
                 <br> 
                 <br>
                 Tiki N'Yiki is created to improve education and support efforts of disabled children in Burkina Faso. It is sounding as a slogan adressing the necessity and the possibility for everyone to lead his own achievement. 
@@ -2680,7 +2680,7 @@ font-size: 19px;
               <div class="Kontent1">
 
                 <div class="AB">
-                <b style="font-size: 22px; color: rgb(5, 209, 255)">Region of Implementation</b>
+                <b style="font-size: 22px; color: rgb(37, 66, 195)">Region of Implementation</b>
                 <br>
                 <br>
                 Tiki N'Yiki has first been implemented in Burkina Faso in 2016. Amongs many reasons is the main one that focuses to create a free and ideal space and time on improving education for disabled kids. 
@@ -2818,7 +2818,7 @@ font-size: 19px;
                   <div class="H-P-H">
                   <figure>
                     <img src="https://www.zupimages.net/up/22/27/zf4p.jpg" alt="Red Flower">
-                    <figcaption style="font-size: 17px; text-align: left; color: rgb(5, 209, 255);">
+                    <figcaption style="font-size: 17px; text-align: left; color: rgb(37, 66, 195);">
                       A Multicolored Flower Shining Summertime
                     </figcaption>
                 </figure>
@@ -2845,7 +2845,7 @@ font-size: 19px;
                 <div class="FST">
                   <figure>
                     <img src="https://cdn-icons-png.flaticon.com/512/4762/4762089.png" alt="Food Security">
-                        <figcaption style="color: rgb(5, 209, 255); font-size: 14px; font-family: georgia; margin-top: 5px">Some people are throwing food in the trash and others are starving
+                        <figcaption style="color: rgb(37, 66, 195); font-size: 14px; font-family: georgia; margin-top: 5px">Some people are throwing food in the trash and others are starving
                         </figcaption>
                     </figure>
 
