--- a/index.html
+++ b/index.html
@@ -185,7 +185,8 @@
                  top: 0;
                  position: sticky;
                  cursor: pointer;
-                 box-shadow: 0 6.5px 0.5rem 2px rgb(21, 65, 160);
+                 border-bottom: 3px solid rgba(19, 73, 139, 0.763);
+                 box-shadow: 0 2px 0.3rem 1px rgba(19, 73, 139, 0.763);
           }
 
           .navbar:hover{
