--- a/index.html
+++ b/index.html
@@ -185,8 +185,7 @@
                  top: 0;
                  position: sticky;
                  cursor: pointer;
-                 border-bottom: 3px solid rgba(19, 73, 139, 0.763);
-                 box-shadow: 0 2px 0.3rem 1px rgba(19, 73, 139, 0.763);
+                 box-shadow: 0 6.45px 0.5rem 2px rgb(35, 79, 173);
           }
 
           .navbar:hover{
@@ -1648,7 +1647,9 @@ font-size: 19px;
   height: 415px;
   overflow: hidden;
   margin-top: 4.5rem;
-  background: #000;
+  border: 0.4rem solid #3e3e3e9a;
+  padding: 5px;
+  border-radius: 0.6rem;
 }
 
 .VDI{
