--- a/index.html
+++ b/index.html
@@ -712,13 +712,13 @@ border: 0.14px solid rgba(172, 174, 183, 0.565);
             justify-content: space-around;
             justify-items: center;
             padding: 0.85rem;
-            width: 85.99%;
+            width: 85.95%;
             height: 280px;
             background:transparent;
             margin-top: -1px;
             opacity: 0.97;
-            border: 0.15rem solid #fff;
-            border-radius: 0.4rem;
+            border: 0.14rem solid #afadadc8;
+            border-radius: 0.2rem;
            }
            
 
@@ -1334,7 +1334,7 @@ font-size: 14px;
   column-gap: 0.25rem;
   justify-content: space-between;
   justify-items: center;
-  width: 101.85%;
+  width: 102%;
   height: 514px;
   padding: 25px;
   background: #fff;
