--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
         justify-content: center;
         justify-items: center;
         width: 100%;
-        height: 1.7rem;
-        padding: 0.15rem;
+        height: 1.75rem;
+        padding: 0.1rem;
         object-fit: cover;
         font-family: 'georgia';
         font-size: 0.72rem;
@@ -185,7 +185,8 @@
                  top: 0;
                  position: sticky;
                  cursor: pointer;
-                 box-shadow: 0 6.5px 0.55rem 0px rgb(35, 79, 173);
+                 box-shadow: 0 -7px 0.2rem 2px rgb(35, 79, 173);
+                 border-bottom: 4px solid rgba(183, 183, 186, 0.392);
           }
 
           .navbar:hover{
@@ -2037,16 +2038,16 @@ font-size: 19px;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 61px;
-    height: 57px;
+    width: 60px;
+    height: 55px;
     border-radius: 50%;
     color: yellow;
     font-family: 'arial narrow';
-    font-size: 13.75px;
+    font-size: 13.53px;
     padding: 2px;
     background: #bd2157f0;
-    margin-top: -15px;
-    margin-left: 0.35rem;
+    margin-top: -16.8px;
+    margin-left: 0.33rem;
     cursor: pointer;
     border: 0.12rem solid rgba(10, 51, 90, 0.926);
     
