--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
       justify-content: space-between;
       justify-items: center;
       width: 100%;
-      height: 1260px;
+      height: 1270px;
       background: rgba(183, 183, 186, 0.395);
       color: rgba(109, 109, 109, 0.925);
       font-family: 'helvetica';
@@ -845,9 +845,9 @@ opacity: 0.97;
       width: 86.25%;
       height: 100px;
       background: #fff;
-      color: #000;
+      color: #606060ef;
       font-family: 'Poppins';
-      font-size: 2rem;
+      font-size: 1.99rem;
       padding: 1.5rem;
       font-weight: bold;
       border-radius: 0.15rem;
@@ -873,7 +873,7 @@ opacity: 0.97;
       width: 84.2%;
       height: 100px;
       background: #fff;
-      color: #000;
+      color: #606060ef;
       font-family: 'Poppins';
       font-size: 2rem;
       padding: 1.5rem;
@@ -1196,7 +1196,7 @@ opacity: 0.97;
       width: 84.2%;
       height: 100px;
       background: #fff;
-      color: #000;
+      color: #606060ef;
       font-family: 'Poppins';
       font-size: 2rem;
       padding: 1.5rem;
@@ -1449,7 +1449,7 @@ font-size: 20px;
       width: 84.2%;
       height: 100px;
       background: #fff;
-      color: #000;
+      color: #606060ef;
       font-family: 'Poppins';
       font-size: 2rem;
       padding: 1.5rem;
@@ -1642,9 +1642,9 @@ font-size: 19px;
   height: 415px;
   overflow: hidden;
   margin-top: 4.5rem;
-  border: 0.4rem solid #fcfcfcf9;
-  padding: 5px;
-  border-radius: 0.6rem;
+  border: 0.7rem solid #fff;
+  padding: 15px;
+  border-radius: 0.25rem;
 }
 
 .VDI{
@@ -1760,13 +1760,13 @@ font-size: 19px;
           justify-content: center;
           align-items: center;
           width: 80%; 
-          height: 40px; 
+          height: 50px; 
           padding: 10px;
-          background: #474747eb;
+          background: #fff;
           font-family: arial;
-          font-size: 18px;
-          color: #f1f1f1;
-          border: 3px solid #fff;
+          font-size: 20px;
+          color: #7d7d7dd9;
+          border: 0.12rem solid rgba(146, 146, 149, 0.544);
           margin-top: 1px;
         }
 
