--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
         justify-content: center;
         justify-items: center;
             width: 100%;
-            height: 792px;
+            height: 788px;
             background: transparent;  
             padding: 10px;
             color: #000;
@@ -464,10 +464,8 @@
             justify-items: center;
             background: transparent;
             width: 88.6%;
-            height: 480px;
+            height: 500px;
             padding: 5px;
-            opacity: 0.97;
-            margin-top: -4px;
           }
 
           .T-Area{
@@ -653,7 +651,7 @@ border: 0.14px solid rgba(172, 174, 183, 0.565);
             color: #000;
             background: #fff; 
             border-radius: 0.15rem;
-            margin-top: -34px;
+            margin-top: -27px;
             border: 0.12rem solid rgba(146, 146, 149, 0.544);
           }
 
@@ -731,6 +729,7 @@ color: #000;
 background: #fff;
 box-shadow: 0 0 0.25rem -0.25px rgba(13, 13, 13, 0.7);
 border-radius: 1rem;
+border-bottom: 0.45rem solid rgba(24, 81, 155, 0.989);
 font-family: 'helvetica';
 font-size: 20px;
 line-height: 19px;
@@ -762,7 +761,7 @@ font-size: 15px;
             justify-content: center;
             align-items: center;
 width: 290px;
-height: 43px;
+height: 41px;
 padding: 6px;
 border: 0.14px solid rgba(172, 174, 183, 0.565);
             color: #2b2b2bbb;
@@ -790,6 +789,7 @@ padding: 10px;
 color: #000;
 background: #fff;
 box-shadow: 0 0 0.25rem -0.25px rgba(13, 13, 13, 0.7);
+border-bottom: 0.45rem solid rgba(24, 81, 155, 0.989);
 border-radius: 1rem;
 font-family: 'helvetica';
 font-size: 20px;
@@ -820,6 +820,7 @@ padding: 10px;
 color: #000;
 background: #fff;
 box-shadow: 0 0 0.25rem -0.25px rgba(13, 13, 13, 0.7);
+border-bottom: 0.45rem solid rgba(24, 81, 155, 0.989);
 border-radius: 1rem;
 font-family: 'helvetica';
 font-size: 20px;
@@ -1087,8 +1088,8 @@ border-bottom: 0.2px solid #e4769f;
   color: #242424c5;
   background: transparent;
   box-shadow: 0 0 0.25rem 0.25px rgba(171, 171, 171, 0.997);
+  border-bottom: 0.5rem solid rgba(24, 81, 155, 0.989);
   cursor: pointer;
-  opacity: 0.97;
 }
 
 .DiV1{
@@ -1492,6 +1493,7 @@ font-size: 20px;
             border-radius: 0.15rem;
             margin-top: -5.5px;
             border: 0.12rem solid rgba(146, 146, 149, 0.544);
+            border-bottom: 0.2rem solid rgba(24, 81, 155, 0.989);
           }
 .FoodSecurity:hover{
   border: 1px solid #000;
@@ -1541,14 +1543,15 @@ font-size: 20px;
   height: 350px;
   font-family: helvetica;
   font-size: 27.45px;
-  line-height: 32px;
+  line-height: 31.5px;
   padding: 20px;
   border-radius: 0.45rem;
   text-align: left;
   color: #000;
   background: #fff;
   box-shadow: 0 0 0.25rem 0.25px rgba(13, 13, 13, 0.7);
-  opacity: 0.9;
+  opacity: 0.97;
+  border-bottom: 0.7rem solid rgba(24, 81, 155, 0.989);
 }
 
 .FooD:hover{
@@ -2747,7 +2750,7 @@ font-size: 19px;
 
               <a href="https://www.education.gov.bf/accueil" target="_blank">
                 <div class="DiV2">
-                <b style="font-size: 24.43px; font-family: 'helvetica'; line-height: 27.73px; color: #272727d5">The More The Rate of Education Get Higher, The More The Rate of Poverty Will Be Lower And The More the Index of Development Will Be Ascendant. That Highlights How Education Is Important and Stands as a Foundation for Nations to Implement a Sustainable Development.</b>
+                <b style="font-size: 24.4px; font-family: 'helvetica'; line-height: 27px; color: #525252d5">The More The Rate of Education Get Higher, The More The Rate of Poverty Will Be Lower And The More the Index of Development Will Be Ascendant. That Highlights How Education Is Important and Stands as a Foundation for Nations to Implement a Sustainable Development.</b>
                 </div>
               </a>
               
