--- a/index.html
+++ b/index.html
@@ -698,14 +698,13 @@ border: 0.14px solid rgba(172, 174, 183, 0.565);
             grid-template-columns: 348px 348px 348px;
             justify-content: space-around;
             justify-items: center;
-            padding: 1rem;
-            width: 85.95%;
+            padding: 1.1rem;
+            width: 85.96%;
             height: 286px;
             background:transparent;
-            margin-top: 1px;
+            margin-top: -1.5px;
             border-left: 1rem solid #fff;
             border-right: 1rem solid #fff;
-            border-radius: 0.2rem;
            }
            
 
@@ -1780,16 +1779,17 @@ font-size: 19px;
           flex-direction: column;
           width: 80%;
           height: 670px;
-          color: #777777f9; 
-          font-family: georgia;
-          font-size: 21.5px; 
+          color: #838383f9; 
+          font-family: arial;
+          font-size: 22.2px; 
           text-align: left; 
-          line-height: 28.8px;
+          line-height: 29.2px;
           padding: 2rem;
           cursor: pointer;
           background: #fff;  
           margin-top: 1rem;
           border: 0.12rem solid rgba(146, 146, 149, 0.544);
+          border-radius: 0.75rem;
     
         }
 
