--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
       justify-content: space-between;
       justify-items: center;
       width: 100%;
-      height: 1300px;
+      height: 1350px;
       background: rgba(183, 183, 186, 0.395);
       color: rgba(109, 109, 109, 0.925);
       font-family: 'helvetica';
@@ -1778,13 +1778,13 @@ font-size: 19px;
           align-items: center;
           flex-direction: column;
           width: 80%;
-          height: 670px;
+          height: 700px;
           color: #838383f9; 
           font-family: arial;
-          font-size: 22.2px; 
+          font-size: 22px; 
           text-align: left; 
-          line-height: 29.2px;
-          padding: 2rem;
+          line-height: 28.5px;
+          padding: 4rem;
           cursor: pointer;
           background: #fff;  
           margin-top: 1rem;
@@ -2532,7 +2532,7 @@ font-size: 19px;
               <div class="ViD">
               
                 <h1 style="font-size: 2rem; text-align: left; margin-top: 1rem; color: #616161e4;">What it means to live with a disability ?</h1>
-            <p>Living as a disabled person is perpetually challenging and also life-changing. Over some experiences that combinate both consideration and discrimination, living as a disabled can be teaching in some ways. In terms of how disabled people are courageous and determinated to make their lives, is inspiring, energy-fueling and may bring hope for some people in commuinities. Sometimes disabled people are unintentionally seen to be like social barometers despite they are experiencing social bareers. So through their interactions with the so-called "normal people", disabled people are sometimes able to tell who is more inclusive-minded than another (others) on a base of his views, approaches and behavings about disabled. As human-beings we should continue to more grow values of solidarity, compassion, mutual respect, sharing spirit among others that are important to be more shared in the communities. Basically living as a disabled is very tough and the issues can vary from person to person and from a region to another.
+            <p>Living as a disabled person is perpetually challenging and also life-changing. Over some experiences that combinate both consideration and discrimination, living as a disabled can be teaching in some ways. In terms of how disabled people are courageous and determinated to make their lives, is inspiring, energy-fueling and may bring hope for some people in commuinities. Sometimes disabled people are unintentionally seen to be like social barometers despite they are experiencing social bareers. So through their interactions with the so-called "normal people", disabled people are sometimes able to tell who is more inclusive-minded than another (others) on a base views, approaches and behavings about disability. As human-beings we should continue to grow values of solidarity, compassion, mutual respect, sharing spirit among others that are important to create harmony and cohesion in the communities. Basically living as a disabled is very tough and the issues can vary from person to person and from a region to another.
                Where the disabled people are living, will determine the quality and the quantity of their lifetime experiences. But it's not unknown that the harsh and silent climate of discriminations towards disabled people, is undermining their rights. They have always to deal with unfairness and stigmatisation. It shouldn't. That's why Tiki N'Yiki is created to improve Education and Protect Rights of disabled people especially disabled children.
 
               </p>
