--- a/index.html
+++ b/index.html
@@ -2532,21 +2532,21 @@ font-size: 19px;
               <div class="ViD">
               
                 <h1 style="font-size: 2rem; text-align: left; margin-top: 1rem; color: #616161e0;">What it means to live with a disability ?</h1>
-            <p>Living as a disabled person is perpetually challenging and also life-changing. Over to experience both consideration and discrimination and then learning more about it, living as a disabled can be teaching in some ways. 
+            <p>Living as a disabled person is tough, perpetually challenging and also life-changing. Over to experience some bit of consideration by the ones and a lot of discriminations by the others, living with a disabilty can be learning and teaching in some ways. 
               <br> 
               <br>
               In terms of how disabled people are courageous and determinated to make their ways to live despite disability, is inspiring, energy-fueling and may hope-making for some people in the communities. 
               <br>
               <br>
-              Sometimes disabled people could unintentionally be considered like social barometers in a spite of social bareers. Through social interactions and conversations with the so-called "normal people", they are sometimes able to index an inclusive-minded person or not on a base of the views, approaches and behavings about disability.
+              Disabled people are unintentionally often considered like social barometers in a spite of social bareers they are living. Through conversations and social intractions with the so-called "normal people", they are sometimes able to identify who is an inclusive-minded person or not based on views, approaches and behavings about disability.
               <br>
               <br>
-               As human-beings we should more grow values of solidarity, compassion, mutual respect, sharing spirit among others in order to build harmony and cohesion in the communities. 
+               As human-beings we should more advocate for universal values like solidarity, compassion, mutual respect, sharing spirit among others in order to build a society based on harmony, cohesion and inclusion for all. 
                
                <br>
                <br>
                Basically living as a disabled is very tough and the issues can vary from person to person and from a region to another.
-               Wherever disabled people are living, will determine their lifetime. 
+               Wherever disabled people are living, will be impacting their lifetime experiences. 
                <br>
                <br>
                But it's not unknown that the harsh and silent climate of discriminations towards disabled people, is undermining their rights. They have always to live with unfairness. It shouldn't. 
