--- a/index.html
+++ b/index.html
@@ -728,7 +728,7 @@ color: #000;
 background: #fff;
 box-shadow: 0 0 0.25rem -0.25px rgba(13, 13, 13, 0.7);
 border-radius: 1rem;
-border-bottom: 0.45rem solid rgba(24, 81, 155, 0.989);
+border-bottom: 0.45rem solid #0a4bfc;
 font-family: 'helvetica';
 font-size: 20px;
 line-height: 19px;
@@ -788,7 +788,7 @@ padding: 10px;
 color: #000;
 background: #fff;
 box-shadow: 0 0 0.25rem -0.25px rgba(13, 13, 13, 0.7);
-border-bottom: 0.45rem solid rgba(24, 81, 155, 0.989);
+border-bottom: 0.45rem solid #0a4bfc;
 border-radius: 1rem;
 font-family: 'helvetica';
 font-size: 20px;
@@ -819,7 +819,7 @@ padding: 10px;
 color: #000;
 background: #fff;
 box-shadow: 0 0 0.25rem -0.25px rgba(13, 13, 13, 0.7);
-border-bottom: 0.45rem solid rgba(24, 81, 155, 0.989);
+border-bottom: 0.45rem solid #0a4bfc;
 border-radius: 1rem;
 font-family: 'helvetica';
 font-size: 20px;
@@ -2527,18 +2527,18 @@ font-size: 19px;
 
           </div>
 
-          <div class="ViDe">Here a caption for a pic or a descriptive explanation</div>
+          <div class="ViDe" style="color: #098ff6da">Here a caption for a pic or a descriptive explanation</div>
 
               <div class="ViD">
               
-                <h1 style="font-size: 2rem; text-align: left; margin-top: 1rem; color: #616161e0;">What it means to live with a disability ?</h1>
+                <h1 style="font-size: 2rem; text-align: left; margin-top: 1rem; color: #0a93fce0;">What it means to live with a disability ?</h1>
             <p>Living as a disabled person is tough, perpetually challenging and also life-changing. Over to experience some bit of consideration by the ones and a lot of discriminations by the others, living with a disabilty can be learning and teaching in some ways. 
               <br> 
               <br>
               In terms of how disabled people are courageous and determinated to make their ways to live despite disability, is inspiring, energy-fueling and may hope-making for some people in the communities. 
               <br>
               <br>
-              Disabled people are unintentionally often considered like social barometers in a spite of social bareers they are living. Through conversations and social intractions with the so-called "normal people", they are sometimes able to identify who is an inclusive-minded person or not based on views, approaches and behavings about disability.
+              Disabled people are unintentionally often considered like social barometers in a spite of social bareers they are living. Through conversations and social interactions with the so-called "normal people", they are sometimes able to identify who is an inclusive-minded person or not based on views, approaches and behavings about disability.
               <br>
               <br>
                As human-beings we should more advocate for universal values like solidarity, compassion, mutual respect, sharing spirit among others in order to build a society based on harmony, cohesion and inclusion for all. 
@@ -2582,7 +2582,7 @@ font-size: 19px;
 
               <figure>
                 <img src="https://www.zupimages.net/up/22/21/di3p.jpg" alt="Drumming - BFA">
-                <figcaption style="color: rgb(1, 13, 250); margin-top: 3px;">Drumming is one of the beloved activities for children</figcaption>
+                <figcaption style="color: #0a4bfc; margin-top: 3px;">Drumming is one of the beloved activities for children</figcaption>
                 </figure>
 
               </div>
@@ -2604,7 +2604,7 @@ font-size: 19px;
               <div class="CIP">
               <figure>
                 <img src="https://www.zupimages.net/up/22/46/daw5.jpg" alt="Support Teaching">
-                <figcaption style="color: rgb(1, 13, 250); margin-top: -1px;">Teaching Maths and Computer Science in French</figcaption>
+                <figcaption style="color: #0a4bfc; margin-top: -1px;">Teaching Maths and Computer Science in French</figcaption>
                 </figure>
             </div>
             <div class="PiK">
