--- a/index.html
+++ b/index.html
@@ -179,18 +179,18 @@
                  justify-items: center;
                  background: #fff;
                  width: 100%;
-                 height: 100px;
+                 height: 98px;
                  object-fit: cover;
                  z-index: 1;
                  top: 0;
                  position: sticky;
                  cursor: pointer;
-                 box-shadow: 0 2px 0.66rem -2px rgb(30, 69, 152);
-                 border-bottom: 4.4px solid rgba(32, 73, 161, 0.845);
+                 box-shadow: 0 9px 0.6rem -0.1px rgba(17, 63, 116, 0.962);
+                 border-bottom: 6px solid rgba(29, 72, 166, 0.906);
           }
 
           .navbar:hover{
-            background: rgba(244, 246, 255, 0.992);
+            background: rgba(238, 243, 255, 0.992);
           }
 
           .Joint-Point{
@@ -480,7 +480,7 @@
             height: 777px;
             line-height: 21px;
             font-family: 'georgia';
-            font-size: 17px;
+            font-size: 18px;
             color: #000;
             background: #fff;  
             cursor: pointer;
@@ -534,10 +534,10 @@
             justify-items: center;
             width: 100%;
             height: 60px;
-            color: #404040e4;
-            padding: 5px;
             font-family: 'helvetica';
             font-size: 18px;
+            color: #404040e4;
+            padding: 5px;
             line-height: 23px;
             background: #fff;
           }
@@ -586,7 +586,7 @@
             height: 777px;
             line-height: 21px;
             font-family: 'helvetica';
-            font-size: 17px;
+            font-size: 18px;
             color: #404040e4;
             background: #fff;
             cursor: pointer;
@@ -2028,15 +2028,15 @@ font-size: 19px;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 60px;
-    height: 55px;
+    width: 59.8px;
+    height: 54.15px;
     border-radius: 50%;
     color: yellow;
     font-family: 'arial narrow';
-    font-size: 13.53px;
+    font-size: 13.35px;
     padding: 2px;
     background: #bd2157f0;
-    margin-top: -16.8px;
+    margin-top: -18px;
     margin-left: 0.33rem;
     cursor: pointer;
     border: 0.12rem solid rgba(10, 51, 90, 0.926);
@@ -2527,11 +2527,11 @@ font-size: 19px;
 
           </div>
 
-          <div class="ViDe" style="color: #098ff6da">Here a caption for a pic or a descriptive explanation</div>
+          <div class="ViDe" style="color: #32475ada">Here a caption for a pic or a descriptive explanation</div>
 
               <div class="ViD">
               
-                <h1 style="font-size: 2rem; text-align: left; margin-top: 1rem; color: #0a93fce0;">What it means to live with a disability ?</h1>
+                <h1 style="font-size: 2rem; text-align: left; margin-top: 1rem; color: #0a93fce9;">What it means to live with a disability ?</h1>
             <p>Living as a disabled person is tough, perpetually challenging and also life-changing. Over to experience some bit of consideration by the ones and a lot of discriminations by the others, living with a disabilty can be learning and teaching in some ways. 
               <br> 
               <br>
