--- a/index.html
+++ b/index.html
@@ -1637,14 +1637,26 @@ font-size: 19px;
         
         .VD2i{
           display: grid;
-          grid-template-columns: 1fr;
+          grid-template-rows: 0.35fr 1fr;
           justify-content: center;
           justify-items: center;
           width: 89.55%;
-          height: 700px;
+          height: 640px;
           background: #fff;
-          padding: 10px;
+          border: 0.12rem solid rgba(157, 157, 159, 0.614);
         }
+.VD3i{
+ display: grid;
+ justify-content: center;
+          justify-items: center;
+          width: 100%;
+          height: 70px;
+          font-family: 'comic sans ms';
+          font-size: 2rem;
+          color:rgba(108, 108, 108, 0.847);
+    margin-top: 2.5rem;
+
+}
 
 .VDi{
   display: grid;
@@ -1654,10 +1666,9 @@ font-size: 19px;
   width: 80%;
   height: 415px;
   overflow: hidden;
-  border: 0.7rem solid #fff;
+  border: 0.25rem solid #3b3b3bdd;
   padding: 15px;
   border-radius: 0.25rem;
-  margin-top: 15rem;
 }
 
 .VDI{
@@ -1779,7 +1790,7 @@ font-size: 19px;
           font-family: arial;
           font-size: 20px;
           color: #7d7d7dd9;
-          border: 0.13rem solid #fff;
+          border: 0.12rem solid rgba(157, 157, 159, 0.614);
           margin-top: 1px;
         }
 
@@ -2520,6 +2531,8 @@ font-size: 19px;
             <div class="navbar1">
 
               <div class="VD2i">
+
+                <div class="VD3i"> WELCOME ON THIS WEBSITE ! THANK YOU FOR YOUR TIME !</div>
 
               <div class="VDi">
   
