--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
       justify-content: space-between;
       justify-items: center;
       width: 100%;
-      height: 1440px;
+      height: 1420px;
       background: rgba(152, 152, 160, 0.292);
       color: rgba(109, 109, 109, 0.925);
       font-family: 'helvetica';
@@ -1809,6 +1809,7 @@ font-size: 19px;
           cursor: pointer;
           background: #fff;  
           border: 0.12rem solid rgba(157, 157, 159, 0.614);
+          margin-top: 0.5rem;
         }
 
 .footer1 img{
@@ -2559,7 +2560,7 @@ font-size: 19px;
 
               <div class="ViD">
               
-                <h1 style="font-size: 2rem; text-align: left; margin-top: 1rem; color: #0a93fce9;">What it means to live with a disability ?</h1>
+                <h1 style="font-size: 2rem; text-align: left; color: #0a93fce9;">What it means to live with a disability ?</h1>
             <p>Living as a disabled person is tough, perpetually challenging and also life-changing. Over to experience some bit of consideration by the ones and a lot of discriminations by the others, living with a disabilty can be learning and teaching in some ways. 
               <br> 
               <br>
