--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
       justify-content: space-between;
       justify-items: center;
       width: 100%;
-      height: 1430px;
+      height: 1490px;
       background: rgba(152, 152, 160, 0.292);
       color: rgba(109, 109, 109, 0.925);
       font-family: 'helvetica';
@@ -1090,6 +1090,10 @@ border-bottom: 0.2px solid #e4769f;
   cursor: pointer;
 }
 
+.Dive1:hover{
+  border-bottom: 0.7rem solid green;
+}
+
 .DiV1{
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
@@ -1173,15 +1177,15 @@ opacity: 0.97;
   padding: 10px;
   width: 100%;
   height:288px;
-  color: #d7d7d7d5;
+  color: #bcbcbcd5;
   border-radius: 0.5rem;
   
 }
 
 .DiV2:hover{
   border: 0.16rem solid transparent;
-  color: #525252ef;
-  transition: 0.14s ease-in;
+  color: #000;
+  transition: 0.2s ease-in;
   border-radius: 0.8rem;
   padding: 10px;
   background: #fff;
@@ -1785,7 +1789,8 @@ font-size: 19px;
           background: transparent;
           font-family: arial;
           font-size: 20px;
-          color: #2c2f35af;
+          color: #414245c5;
+          margin-top: 0.8rem;
         }
 
         .VDA{
@@ -1890,12 +1895,12 @@ font-size: 19px;
           align-items: center;
           flex-direction: column;
           width: 89.55%; 
-          height: 700px;
+          height: 750px;
           color: #717171f0; 
           font-family: 'arial';
           font-size: 18.5px; 
           text-align: left; 
-          line-height: 24px;
+          line-height: 25px;
           padding: 4rem;
           cursor: pointer;
           background: #fff;  
