--- a/index.html
+++ b/index.html
@@ -1782,6 +1782,8 @@ font-size: 19px;
         }
 
         .ViDe{
+          display: flex;
+          justify-content: center;
           position: relative;
           width: 100%; 
           height: 70px; 
@@ -1791,6 +1793,7 @@ font-size: 19px;
           font-size: 20px;
           color: #414245c5;
           margin-top: 0.8rem;
+          border-bottom: 0.5rem solid #048eff;
         }
 
         .VDA{
