--- a/index.html
+++ b/index.html
@@ -844,7 +844,7 @@ opacity: 0.97;
       width: 86.25%;
       height: 100px;
       background: #fff;
-      color: #606060ef;
+      color: #0073fff5;
       font-family: 'Poppins';
       font-size: 1.99rem;
       padding: 1.5rem;
@@ -872,7 +872,7 @@ opacity: 0.97;
       width: 84.2%;
       height: 100px;
       background: #fff;
-      color: #606060ef;
+      color: #0073fff5;
       font-family: 'Poppins';
       font-size: 2rem;
       padding: 1.5rem;
@@ -1199,7 +1199,7 @@ opacity: 0.97;
       width: 84.2%;
       height: 100px;
       background: #fff;
-      color: #606060ef;
+      color: #0073fff5;
       font-family: 'Poppins';
       font-size: 2rem;
       padding: 1.5rem;
@@ -1451,7 +1451,7 @@ font-size: 20px;
       width: 84.2%;
       height: 100px;
       background: #fff;
-      color: #606060ef;
+      color: #0073fff5;
       font-family: 'Poppins';
       font-size: 2rem;
       padding: 1.5rem;
@@ -1655,9 +1655,9 @@ font-size: 19px;
           justify-items: center;
           width: 100%;
           height: 70px;
-          font-family: 'comic sans ms';
-          font-size: 1.96rem;
-          color:rgba(108, 108, 108, 0.847);
+          font-family: 'helvetica';
+          font-size: 2rem;
+          color: rgb(2, 150, 255);
           margin-top: 2.90rem;
 
 }
